added old games data generator and games data transformer

--- a/package.json
+++ b/package.json
@@ -16,6 +16,6 @@
   ],
   "scripts": {
     "data": "node ./data/generate.js",
-    "surge": "surge ./client quizplease.surge.sh"
+    "transform": "node ./data/transform_games_data.js"
   }
 }
