--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "teams"
   ],
   "scripts": {
+    "install": "napa",
     "start": "node ./server",
     "lint": "eslint src"
   },
@@ -31,7 +32,10 @@
     "css-loader": "^0.23.1",
     "eslint": "^1.10.3",
     "eslint-plugin-react": "^3.6.2",
+    "exports-loader": "^0.6.3",
     "file-loader": "^0.9.0",
+    "imports-loader": "^0.6.5",
+    "napa": "^2.3.0",
     "nib": "^1.1.0",
     "normalize.css": "^4.2.0",
     "react-css-modules": "^3.7.7",
@@ -48,5 +52,8 @@
     "react-dom": "^0.14.6",
     "react-router": "^2.5.2",
     "redux": "^3.5.2"
+  },
+  "napa": {
+    "vanilla.kinetic": "https://github.com/dzek69/vanilla.kinetic"
   }
 }
