--- a/data/package.json
+++ b/data/package.json
@@ -15,9 +15,9 @@
     "teams"
   ],
   "scripts": {
-    "data": "node ./data/generate.js",
-    "gen_prev": "node ./data/generate/previous_games_data.js",
-    "transform": "node ./data/transform/games_data.js",
-    "gen_full": "node ./data/generate/full_data.js"
+    "data": "node ./generate.js",
+    "gen_prev": "node ./generate/previous_games_data.js",
+    "transform": "node ./transform/games_data.js",
+    "gen_full": "node ./generate/full_data.js"
   }
 }
