--- a/package.json
+++ b/package.json
@@ -16,7 +16,11 @@
   ],
   "scripts": {
     "install": "napa",
+    "clean": "rimraf build",
     "start": "node ./server",
+    "start:prod": "cross-env NODE_ENV=production CONFIG=production node ./server",
+    "build": "npm run clean && cross-env DEBUG=app:* NODE_ENV=development CONFIG=development node ./bin/compile",
+    "build:prod": "npm run clean && cross-env DEBUG=app:* NODE_ENV=production CONFIG=production node ./bin/compile",
     "lint": "eslint src"
   },
   "devDependencies": {
@@ -29,27 +33,40 @@
     "babel-preset-es2015": "^6.0.15",
     "babel-preset-react": "^6.0.15",
     "babel-preset-stage-0": "^6.0.15",
+    "babel-register": "^6.9.0",
+    "chalk": "^1.1.3",
+    "copy-webpack-plugin": "^3.0.1",
+    "cross-env": "^2.0.0",
     "css-loader": "^0.23.1",
+    "debug": "^2.2.0",
     "eslint": "^1.10.3",
     "eslint-plugin-react": "^3.6.2",
     "exports-loader": "^0.6.3",
+    "express": "^4.14.0",
+    "extract-text-webpack-plugin": "^1.0.1",
     "file-loader": "^0.9.0",
+    "html-webpack-plugin": "^2.22.0",
     "imports-loader": "^0.6.5",
     "napa": "^2.3.0",
     "nib": "^1.1.0",
     "normalize.css": "^4.2.0",
     "react-css-modules": "^3.7.7",
     "react-hot-loader": "^1.3.0",
+    "rimraf": "^2.5.3",
     "style-loader": "^0.13.1",
     "stylus": "^0.54.5",
     "stylus-loader": "^2.1.1",
     "url-loader": "^0.5.7",
     "webpack": "^1.12.2",
-    "webpack-dev-server": "^1.12.1"
+    "webpack-dev-middleware": "^1.6.1",
+    "webpack-dev-server": "^1.12.1",
+    "webpack-hot-middleware": "^2.12.1"
   },
   "dependencies": {
-    "react": "^0.14.6",
-    "react-dom": "^0.14.6",
+    "chart.js": "^2.1.6",
+    "classnames": "^2.2.5",
+    "react": "^15.2.1",
+    "react-dom": "^15.2.1",
     "react-router": "^2.5.2",
     "redux": "^3.5.2"
   },
