--- a/package.json
+++ b/package.json
@@ -17,10 +17,10 @@
   "scripts": {
     "install": "napa",
     "clean": "rimraf build",
-    "start": "node ./server",
-    "start:prod": "cross-env NODE_ENV=production CONFIG=production node ./server",
     "build": "npm run clean && cross-env DEBUG=app:* NODE_ENV=development CONFIG=development node ./bin/compile",
     "build:prod": "npm run clean && cross-env DEBUG=app:* NODE_ENV=production CONFIG=production node ./bin/compile",
+    "start": "node ./bin/server",
+    "start:prod": "cross-env NODE_ENV=production CONFIG=production node ./bin/server",
     "lint": "eslint src"
   },
   "devDependencies": {
