--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "express": "^4.14.0",
     "extract-text-webpack-plugin": "^1.0.1",
     "file-loader": "^0.9.0",
+    "handlebars-loader": "^1.3.0",
     "html-webpack-plugin": "^2.22.0",
     "imports-loader": "^0.6.5",
     "napa": "^2.3.0",
